# rev.com-export

./: .gitignore  LICENSE  LICENSE-CC-BY-SA  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
docs/: PRD.md  README.md  api-reference.md  browser-file-type-fix.md  browser-plan.md  installation.md  project-plan.md  troubleshooting.md  user-guide.md
rev_exporter/: __init__.py  attachments.py  cli.py  client.py  config.py  logging_config.py  models.py  orders.py  storage.py
rev_exporter/browser/: __init__.py  file_scanner.py  generator.py  styles.py  templates.py
tests/: README.md  __init__.py  conftest.py  test_attachments.py  test_cli.py  test_cli_main.py  test_client.py  test_config.py  test_logging_config.py  test_models.py  test_orders.py  test_storage.py
tests/e2e/: __init__.py  test_e2e.py
tests/integration/: __init__.py  test_integration.py
